--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <title>Giphy Search</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
